{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 12,
  "lineage": "c54f3f28-070e-84e7-9296-5340e91dce08",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080713921469:internet-gateway/igw-095c5ccb011343169",
            "id": "igw-095c5ccb011343169",
            "owner_id": "080713921469",
            "vpc_id": "vpc-0117d4e83a9d59b12"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public_sn_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cdf3261817e7671f",
            "owner_id": "080713921469",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095c5ccb011343169",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0117d4e83a9d59b12"
          },
          "dependencies": [
            "aws_internet_gateway.test_ig",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_public_sn_rt_assn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d2c1a577432de38",
            "route_table_id": "rtb-0cdf3261817e7671f",
            "subnet_id": "subnet-000b1b7388825d75f"
          },
          "dependencies": [
            "aws_route_table.vpc_public_sn_rt",
            "aws_subnet.public_sn",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080713921469:security-group/sg-05e4aa494093bf4fc",
            "description": "demo security group to access private ports",
            "egress": [],
            "id": "sg-05e4aa494093bf4fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "40.10.10.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo_private_sg",
            "name_prefix": null,
            "owner_id": "080713921469",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0117d4e83a9d59b12"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080713921469:security-group/sg-0c8eb5500ba4acd16",
            "description": "demo public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8eb5500ba4acd16",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo_pubic_sg",
            "name_prefix": null,
            "owner_id": "080713921469",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0117d4e83a9d59b12"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080713921469:subnet/subnet-04916e77ab92fed51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "40.10.20.0/24",
            "id": "subnet-04916e77ab92fed51",
            "map_public_ip_on_launch": false,
            "owner_id": "080713921469",
            "vpc_id": "vpc-0117d4e83a9d59b12"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080713921469:subnet/subnet-000b1b7388825d75f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "40.10.10.0/24",
            "id": "subnet-000b1b7388825d75f",
            "map_public_ip_on_launch": true,
            "owner_id": "080713921469",
            "vpc_id": "vpc-0117d4e83a9d59b12"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:080713921469:vpc/vpc-0117d4e83a9d59b12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "40.10.0.0/16",
            "default_network_acl_id": "acl-0a489e6306cba5074",
            "default_route_table_id": "rtb-0a685555dff887d77",
            "default_security_group_id": "sg-03d93eb99a1993e16",
            "dhcp_options_id": "dopt-f2d75888",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0117d4e83a9d59b12",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a685555dff887d77",
            "owner_id": "080713921469"
          }
        }
      ]
    }
  ]
}